[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/Entities/Ball.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Entities/PlayerBall.gd" type="Script" id=2]
[ext_resource path="res://Assets/Art/line-texture.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Entities/TrajectoryLine.gd" type="Script" id=4]
[ext_resource path="res://Assets/Art/pegs.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Handlers/PowerupHandler.tscn" type="PackedScene" id=6]

[sub_resource type="Shader" id=3]
code = "shader_type canvas_item;

uniform float time_scale = 20;

void fragment(){
	vec4 in_tex = texture(TEXTURE, vec2(UV.x - TIME * time_scale, UV.y));
	COLOR = in_tex;
}"

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )
shader_param/time_scale = 30.0

[sub_resource type="CircleShape2D" id=1]
radius = 8.0

[node name="PlayerBall" instance=ExtResource( 1 )]
z_index = 1000
script = ExtResource( 2 )

[node name="CollisionShape2D" parent="." index="0"]
visible = false

[node name="Tween" type="Tween" parent="." index="2"]

[node name="TrajectoryLine" type="Node2D" parent="." index="3"]
script = ExtResource( 4 )

[node name="Line" type="Line2D" parent="TrajectoryLine" index="0"]
material = SubResource( 4 )
points = PoolVector2Array( 0, 0, 64, 0 )
width = 20.0
default_color = Color( 1, 1, 1, 1 )
texture = ExtResource( 3 )
texture_mode = 1

[node name="Raycast" type="RayCast2D" parent="TrajectoryLine" index="1"]
visible = false
enabled = true
cast_to = Vector2( 64, 0 )
collision_mask = 33

[node name="Hitbox" type="Area2D" parent="." index="4"]
visible = false
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 1 )

[node name="DashTimer" type="Timer" parent="." index="5"]
wait_time = 3.0
one_shot = true

[node name="Sprite" type="Sprite" parent="." index="6"]
texture = ExtResource( 5 )
hframes = 8
vframes = 8
frame = 7

[node name="DashHoldTimer" type="Timer" parent="." index="7"]
wait_time = 0.05
one_shot = true
__meta__ = {
"_editor_description_": "timer is multiplied by time scale when holding dash (1*0.05)"
}

[node name="PowerupHandler" parent="." index="8" instance=ExtResource( 6 )]

[node name="DashTrailTimer" type="Timer" parent="." index="9"]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="DashTimer" to="." method="_on_DashTimer_timeout"]
[connection signal="timeout" from="DashHoldTimer" to="." method="_on_DashHoldTimer_timeout"]
